🐛 fix: viewport height jumping

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  min-height: 100svh;
+  min-height: 100vh;
   text-wrap: pretty;
 }
 
